:sparkles: Materials query API
